HTML rendered in JS

--- a/index.html
+++ b/index.html
@@ -18,27 +18,7 @@
     </button>
 
     <main id="main" role="main" aria-label="Main content">
-        <div class="input-box">
-            <h1>Metric/Imperial Unit Conversion</h1>
-            <label for="input-value">Value:</label>
-            <input type="text" id="input-value" autocomplete="off" aria-label="Enter a value to convert">
-            <button id="convert-btn">Convert</button>
-        </div>
-    
-        <div class="convert-box" role="region" aria-label="Conversion results">
-            <div class="conversion">
-                <h2 class="convert-head">Length (Meter/Feet)</h2>
-                <p id="length" aria-live="polite" aria-relevant="text"></p>
-            </div>
-            <div class="conversion">
-                <h2 class="convert-head">Volume (Liters/Gallons)</h2>
-                <p id="volume" aria-live="polite" aria-relevant="text"></p>
-            </div>
-            <div class="conversion">
-                <h2 class="convert-head">Mass (Kilograms/Pounds)</h2>
-                <p id="mass" aria-live="polite" aria-relevant="text"></p>
-            </div>
-        </div>
+        <!-- The main content goes here -->
     </main>
     <script src="main.js"></script>
 </body>
